--- a/pwa/public/index.html
+++ b/pwa/public/index.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name=
+  "apple-mobile-web-app-status-bar"
+        content="#ffffff">
+    <meta name="theme-color"
+        content="blue">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <!--<div id="app"></div>-->
+    
+    <div id="content"></div>
+
+    <script type="text/javascript">
+      document.getElementById("content").innerHTML = "Hej verden";
+    </script>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
