--- a/pwa/public/index.html
+++ b/pwa/public/index.html
@@ -18,11 +18,8 @@
     </noscript>
     <!--<div id="app"></div>-->
     
-    <div id="content"></div>
+    <div id="app"></div>
 
-    <script type="text/javascript">
-      document.getElementById("content").innerHTML = "Hej verden";
-    </script>
 
     <!-- built files will be auto injected -->
   </body>
